@@ -98,6 +98,7 @@ All existing SysON _DiagramDescriptions_ (i.g. _General View_, _Interconnection 
 
 - https://github.com/eclipse-syson/syson/issues/1237[#1237] [general-view] Add `ViewUsage` graphical node in the _General View_ diagram.
 - https://github.com/eclipse-syson/syson/issues/1279[#1279] [general-view] Support `ViewUsage` graphical contents in the _General View_ diagram.
+- https://github.com/eclipse-syson/syson/issues/1336[#1336] [general-view] Add manage visibility node action on `Definition` and `Usage` graphical nodes element in the _General View_ diagram.
 
 == v2025.4.0
 
